--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,25 @@
-name: CI
+name: Tests
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
-  build-test:
+  test:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        php: [7.2, 7.3, 7.4, 8.0]
+
+    name: 'PHP ${{ matrix.php }}'
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: php-actions/composer@v1 # or alternative dependency management
-      - uses: php-actions/phpunit@v1
+      - uses: actions/checkout@master
+
+      - name: Select PHP version
+        run: sudo update-alternatives --set php $(which php${{ matrix.php }})
+
+      - name: Install Composer dependencies
+        run: composer install
+
+      - name: Run PHPUnit tests
+        run: composer test
