--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,8 @@
         "branch-alias": {
             "dev-master": "2.0.x-dev"
         }
+    },
+    "scripts": {
+        "test": "phpunit -c phpunit.xml"
     }
 }
