--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
+        "php": "^7.3|^8.0",
         "ext-pcre": "*",
         "psr/http-message": "^1"
     },
@@ -20,8 +20,8 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3.8",
-        "phpspec/prophecy-phpunit": "^2.0"
+        "phpunit/phpunit": "^9.4.3",
+        "phpspec/prophecy-phpunit": "^v2.0.1"
     },
     "autoload-dev": {
         "psr-4": {
